@@ -7,6 +7,7 @@ Morten:
 	* Improve various desktop environments' icon discovery.  [#677]
 	* New function ENCODEURL.  [#658]
 	* New libpython configuration.  [#680]
+	* Fix problem relating to sheet remove and conditional format.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.53
